--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,8 +2,9 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/item"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="15dp"
     app:cardElevation="3dp">
 
@@ -15,9 +16,8 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="150dp"
             android:layout_weight="1"
-            android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:scaleType="fitXY" />
 
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textSize= "30sp" />
+            android:textSize= "@dimen/text_size" />
 
 
         <TextView
@@ -34,21 +34,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Description"
-            android:textSize="30sp" />
+            android:textSize="@dimen/text_size" />
 
         <TextView
             android:id="@+id/year"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="year of  Release"
-            android:textSize="30sp" />
+            android:textSize="@dimen/text_size" />
 
         <TextView
             android:id="@+id/timing"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="duration"
-            android:textSize="30sp" />
+            android:textSize="@dimen/text_size" />
 
     </LinearLayout>
 
