--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,14 +10,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/mainView">
 
         <TextView
             android:id="@+id/headerHorrors"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/title_text_size"
-            android:text="Horrors"/>
+            android:text="@string/horrors"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_horrors"
@@ -32,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/title_text_size"
-            android:text="Thrillers"/>
+            android:text="@string/thrillers"/>
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -49,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/title_text_size"
-            android:text="Comedies"/>
+            android:text="@string/comedies"/>
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -65,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/title_text_size"
-            android:text="Serials"/>
+            android:text="@string/serials"/>
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -79,3 +81,6 @@
     </LinearLayout>
 
 </ScrollView>
+
+
+
