--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
 <resources>
     <dimen name="title_text_size">30sp</dimen>
     <dimen name="text_size">20sp</dimen>
+    <dimen name="recycler_item_image_high">150dp</dimen>
 
 </resources>
