--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -77,15 +77,15 @@
             tools:listitem="@layout/item" />
 
         <TextView
-            android:id="@+id/headerSerials"
+            android:id="@+id/headerFantastic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/title_text_size"
-            android:text="@string/serials"/>
+            android:text="@string/fantastic"/>
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_serials"
+            android:id="@+id/recycler_fantastic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
