--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -11,18 +11,18 @@
         app:showAsAction="always"
         />
 
-    <item
+    <!--<item
         android:title="@string/add"
         android:id="@+id/action_add"
         android:icon="@drawable/ic_baseline_favorite_24"
         android:orderInCategory="10"
         app:showAsAction="ifRoom"
         />
-
+-->
     <item
-        android:title="@string/delete"
-        android:id="@+id/action_clear"
-        android:icon="@drawable/ic_baseline_delete_forever_24"
+        android:title="@string/settings"
+        android:id="@+id/action_settings"
+        android:icon="@drawable/ic_baseline_settings_24"
         android:orderInCategory="20"
         app:showAsAction="ifRoom"
         />
