--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -11,14 +11,14 @@
         app:showAsAction="always"
         />
 
-    <!--<item
+    <item
         android:title="@string/add"
-        android:id="@+id/action_add"
+        android:id="@+id/action_add_to_fav"
         android:icon="@drawable/ic_baseline_favorite_24"
         android:orderInCategory="10"
         app:showAsAction="ifRoom"
         />
--->
+
     <item
         android:title="@string/settings"
         android:id="@+id/action_settings"
