--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -27,5 +27,13 @@
         app:showAsAction="ifRoom"
         />
 
+    <item
+        android:title="@string/content_provider"
+        android:id="@+id/action_content_provider"
+        android:icon="@drawable/ic_baseline_launch_24"
+        android:orderInCategory="20"
+        app:showAsAction="ifRoom"
+        />
+
 
 </menu>
