--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,4 +1,4 @@
-><!--
+<resources><!--
     TODO: Before you run your application, you need a Google Maps API key.
 
     To get one, follow this link, follow the directions and press "Create" at the end:
@@ -19,4 +19,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-<string name="google_maps_key" translatable="false">YOUR_KEY_HERE</string></>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBbwdgXxwBWiSyjHKCsH3JeiF3WiZpvSsM</string>
+</resources>
