--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -32,7 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:src="@drawable/ic_baseline_edit_location_24"/>
+            android:src="@drawable/ic_baseline_edit_location_24"
+        />
 
         <TextView
             android:id="@+id/headerHorrors"
