--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -36,12 +36,9 @@
         />
 
     <item
-        android:title="Geo Location"
-        android:id="@+id/geoLocation"
-        android:icon="@drawable/ic_baseline_edit_location_24"
-        android:orderInCategory="20"
-        app:showAsAction="ifRoom"
-        />
-
+        android:id="@+id/google_maps"
+        android:icon="@android:drawable/ic_dialog_map"
+        android:title="@string/google_maps"
+        app:showAsAction="always" />
 
 </menu>
